[gd_scene load_steps=12 format=2]

[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://tela inicial completa/starSreen.gd" type="Script" id=2]
[ext_resource path="res://mapaTela.imagem.jpeg" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 9
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=7]

[sub_resource type="DynamicFont" id=8]
size = 19
font_data = ExtResource( 1 )

[node name="starScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="bgd" type="Sprite" parent="."]
position = Vector2( 157.625, 91.1875 )
scale = Vector2( 0.338086, 0.280462 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.227451 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.5
margin_top = 0.5
margin_right = 97.5
margin_bottom = 53.5

[node name="startBtn" type="Button" parent="controls"]
margin_right = 195.0
margin_bottom = 9.0
focus_neighbour_top = NodePath("../quitBtn")
theme = SubResource( 6 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.0431373, 0.0352941, 0.968627, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0431373, 0.0352941, 0.968627, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Início"

[node name="controlsBtn" type="Button" parent="controls"]
margin_top = 13.0
margin_right = 195.0
margin_bottom = 22.0
theme = SubResource( 6 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.0313726, 0.980392, 0.0235294, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0313726, 0.980392, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Configurações"

[node name="quitBtn" type="Button" parent="controls"]
margin_top = 26.0
margin_right = 195.0
margin_bottom = 35.0
focus_neighbour_bottom = NodePath("../startBtn")
theme = SubResource( 6 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.968627, 0.435294, 0.0352941, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 0.435294, 0.0352941, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sair"

[node name="name" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -28.5
margin_right = 95.0
margin_bottom = -9.5
theme = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Alaventura"

[connection signal="pressed" from="controls/startBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="controls/controlsBtn" to="." method="_on_controlsBtn_pressed"]
[connection signal="pressed" from="controls/quitBtn" to="." method="_on_quitBtn_pressed"]
